--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: yoshi389111/github-profile-3d-contrib@0.6.0
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.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 }}
           USERNAME: ${{ github.repository_owner }}
       - name: Commit & Push
         run: |
